--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: yoshi389111/github-profile-3d-contrib@0.6.0
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.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 }}
           USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
         run: |
